src/sass/components/_contact.scss
.contact {
  &__left {
    position: sticky;
    top: 7%;

    @media (width <= 1280px) {
      top: 20%;
    }

    @media (width <= 884px) {
      top: 5%;
    }

    @media (width <= 640px) {
      position: relative;
    }
  }

  &__content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 8rem;
    align-items: start;

    @media (width <= 884px) {
      gap: 4rem;
    }

    @media (width <= 640px) {
      grid-template-columns: none;
      gap: 6rem;
    }
  }

  &__subtitle {
    font-family: "Antonio", sans-serif;
    font-weight: 600;
    font-size: 1.3rem;
    text-transform: uppercase;

    @media (width <= 640px) {
      font-size: 1.2rem;
    }

    @media (width <= 400px) {
      font-size: 1.1rem;
    }
  }

  &__title {
    margin-top: 20px;
    font-size: 3.5rem;
    line-height: 1.2;
    font-weight: 700;

    @media (width <= 1280px) {
      font-size: 2.8rem;
    }

    @media (width <= 640px) {
      margin-top: 0.7rem;
      font-size: 2.2rem;
    }

    @media (width <= 400px) {
      font-size: 2rem;
    }

    i {
      font-family: "Playfair Display", sans-serif;
      font-style: italic;
      font-weight: 500;
    }
  }

  &__description {
    margin-top: 1.2rem;

    @media (width <= 1280px) {
      margin-top: 1rem;
    }
  }

  &__description,
  &__email {
    max-width: 480px;
    color: var(--text-secondary);
    font-size: 1.2rem;
    line-height: 1.7;

    @media (width <= 1280px) {
      font-size: 1rem;
    }
  }

  &__email {
    margin-top: 6rem;

    @media (width <= 1280px) {
      margin-top: 7rem;
    }

    @media (width <= 640px) {
      margin-top: 1rem;
    }
  }

  & a {
    font-size: 1.2rem;

    @media (width <= 1280px) {
      font-size: 1rem;
    }

    &:hover {
      text-decoration: underline;
    }
  }
}

.contact-form {
  & section {
    display: grid;
    gap: 4rem;

    @media (width <= 884px) {
      gap: 3.5rem;
    }
  }

  &__label {
    margin-bottom: 12px;

    display: flex;
    align-items: center;
    gap: 8px;

    font-size: 14px;
    color: var(--text-label);
  }
}

.submit {
  &-btn {
    background-color: transparent;
    margin-top: 2rem;
    padding-block: 1.25rem;
    width: 100%;
    border-radius: 999rem;
    background-color: var(--button-primary-bg);
    color: var(--button-primary-text);
    border: 1px solid transparent;
    font-weight: 400;

    &:disabled {
      cursor: not-allowed;
      background-color: var(--button-primary-disabled-bg);
      color: var(--button-primary-disabled-text);
    }

    &:hover {
      background-color: var(--button-primary-bg-hovered);

      border: 1px solid var(--button-primary-text);
    }
  }

  &-icon {
    width: 0.8rem;
    height: 0.8rem;
  }
}

.teste {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
}

.cta {
  &__buttons {
    display: flex;
    align-items: center;
    gap: 1rem;

    & a:first-child {
      background-color: var(--text-primary);
      color: var(--bg-primary);
      border: 1px solid transparent;

      &:hover {
        background-color: var(--cta-button-hover);
      }
    }

    & a:last-child {
      border: 2px solid var(--border-resume);

      & svg {
        color: var(--border-resume);
      }

      &:hover {
        border-color: var(--text-primary);

        & svg {
          color: var(--text-primary);
        }
      }
    }
  }

  &__button {
    width: fit-content;
    margin-top: 3rem;
    font-size: 0.8rem !important;
    font-weight: 500;

    display: flex;
    align-items: center;
    gap: .8rem;

    border-radius: 9rem;
    padding: 0.5rem 1.2rem;
    transition: all 0.1s ease-in;

    svg {
      width: 0.9rem;
      height: 0.9rem;
      transition: all 0.1s ease-in;
    }

    &:hover {
      text-decoration: none !important;
    }
  }
}

